javascript slider tab_button

--- a/interactive/media03.html
+++ b/interactive/media03.html
@@ -26,5 +26,31 @@
   </head>
   <body>
     <div class="media"></div>
+
+    <ul>
+      <li class="select one" id="one">
+        <i class="check_icon"></i>
+      </li>
+      <li class="select two" id="two">
+        <i class="check_icon"></i>
+      </li>
+      <li class="select three" id="three">
+        <i class="check_icon"></i>
+      </li>
+    </ul>
   </body>
+
+  <script>
+    var a = "10";
+
+    var one = document.getElementsByClassName("select");
+    console.log(one);
+    console.log(one[0]);
+
+    for (var i = 0; i < one.length; i++) {
+      one[i].add;
+    }
+  </script>
 </html>
+
+<!-- 연도만 출력하는 sql -->
